syntax = "proto3";

package assignment;

service AssignmentService {
  rpc GetAssignment(AssignmentRequest) returns (AssignmentResponse);
  rpc getAllTaskFromProject(getAllTaskOrUserFromProjectRequest) returns (getAllTaskOrUserFromProjectResponse);
  rpc getAllUserFromProject(getAllTaskOrUserFromProjectRequest) returns (getAllTaskOrUserFromProjectResponse);
  rpc getTotalTaskWithStatusFromProjectAndTotalStaff(getTotalTaskWithStatusFromProjectAndTotalStaffRequest) returns (getTotalTaskWithStatusFromProjectAndTotalStaffResponse);
  rpc getAllUserProject(getAllUserProjectRequest) returns (getAllUserProjectResponse); 
}

message AssignmentRequest {
  string assignment_id = 1;
}

message getAllUserProjectRequest {
  string user_id = 1;
}

message getAllUserProjectResponse {
  repeated string ids = 1;
}

message AssignmentResponse {
  string assignment_id = 1;
  string user_id = 2;
  string project_id = 3;
  string task_id = 4;
  string createdBy = 5;
  string createdAt = 6;
}

message getAllTaskOrUserFromProjectRequest {
  string project_id = 1;
}

message getAllTaskOrUserFromProjectResponse {
  repeated string ids = 1;
}

message getTotalTaskWithStatusFromProjectAndTotalStaffRequest {
  string project_id = 1;
}

message getTotalTaskWithStatusFromProjectAndTotalStaffResponse {
  int64 total_staff = 1;
  int64 total_task_is_done = 2;
  int64 total_task_is_not_done = 3;
}
